tests/neg-macros/newClassParamsMissingArgument/Test_2.scala
@main def Test: Unit = {
  makeClass("foo") // error // error
}
